--- a/definitions/10dlc.yml
+++ b/definitions/10dlc.yml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 
 info:
-  version: 1.0.15
+  version: 1.0.16
   title: 10DLC Brand and Campaign Provisioning
   contact:
     name: Vonage
@@ -382,7 +382,27 @@ paths:
           $ref: "common/common_errors.yml#/components/responses/BadCredentialsError"
         "404":
           $ref: "common/common_errors.yml#/components/responses/NotFoundError"
-
+  /v1/10dlc/brands/{brand_id}/campaigns/{campaign_id}/resubmit:
+    put:
+      parameters:
+        - $ref: "#/components/parameters/BrandId"
+        - $ref: "#/components/parameters/CampaignId"
+      tags:
+        - Campaigns
+      summary: Re-submit active campaign against specific MNO CRE.
+      description: Re-submit active campaign against specific MNO CRE.
+      operationId: campaignResubmit
+      requestBody:
+        $ref: "#/components/requestBodies/MNOResubmit"
+      responses:
+        "200":
+          $ref: "#/components/responses/ResubmitCampaignResponse"
+        "400":
+          $ref: "#/components/responses/ErrorGeneric"
+        "404":
+          $ref: "common/common_errors.yml#/components/responses/NotFoundError"
+        "422":
+          $ref: "#/components/responses/ErrorBrandParameters"
   /v1/10dlc/brands/{brand_id}/campaigns/{campaign_id}/numbers:
     parameters:
       - $ref: "#/components/parameters/BrandId"
@@ -1404,7 +1424,29 @@ components:
             allOf:
               - $ref: "#/components/schemas/VettingRequest"
 
+    ResubmitCampaignResponse:
+      description: Resubmitted campaign response
+      content:
+        application/json:
+          schema:
+            allOf:
+              - $ref: "#/components/schemas/ResubmitCampaignResponseSchema"
+
   requestBodies:
+    MNOResubmit:
+      required: true
+      content:
+        application/json:
+          schema:
+            description: >-
+              ID of MNO. Please refer to the /enum endpoint for an
+              updated list of valid values.
+            type: object
+            required:
+              - mno_ids
+            properties:
+              mno_ids:
+                $ref: "#/components/schemas/MNOIDs"
     LinkNumber:
       required: true
       content:
@@ -2425,7 +2467,12 @@ components:
         - REJECTED
         - SUSPENDED
         - REGISTERED
-
+    MNOIDs:
+      type: array
+      minItems: 1
+      items:
+        type: string
+      example: ["10017"]
     Number:
       description: Telephone Number
       example: "14155550110"
@@ -2650,7 +2697,6 @@ components:
                 example: '2022-08-01T14:26:25.862Z'  
 
           
-
     VettingRequest:
       type: object
       properties:
@@ -2676,6 +2722,35 @@ components:
         create_date:
           type: string
           format: date-time
+        _links:
+          type: object
+          properties:
+            self:
+              type: object
+              properties:
+                href:
+                  type: string
+                  example: "https://api.nexmo.com/v1/10dlc/brands/BLQKOPK/vetting/requests/abcd1234"
+            brand:
+              type: object
+              properties:
+                href:
+                  type: string
+                  example: "https://api.nexmo.com/v1/10dlc/brands/BLQKOPK"
+
+    ResubmitCampaignResponseSchema:
+      type: object
+      properties:
+        campaign_id:
+          $ref: "#/components/schemas/CampaignId"
+        brand_id:
+          $ref: "#/components/schemas/BrandId"
+        mno_metadata:
+          type: array
+          items:
+            $ref: "#/components/schemas/UseCaseMNOMetadata"
+          example:
+            $ref: "#/components/examples/ValidUseCase/value/mno_metadata"
         _links:
           type: object
           properties:
