--- a/definitions/meetings.yml
+++ b/definitions/meetings.yml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Vonage Meetings Public API
-  version: 0.1.4
+  version: 0.1.5
   x-label: Beta
 servers:
   - url: https://api-eu.vonage.com/beta/meetings
@@ -24,6 +24,10 @@ paths:
                     type: integer
                     example: 10
                     description: The number of results returned on this page.
+                  total_items:
+                    type: integer
+                    example: 30
+                    description: The overall number of available rooms.
                   _embedded:
                     type: object
                     properties:
